fix sticky sidebar on mobile

--- a/src/components/tour/details/atoms/sidebar/sidebar.module.scss
+++ b/src/components/tour/details/atoms/sidebar/sidebar.module.scss
@@ -11,4 +11,8 @@
   box-shadow: var(--shadow-primary);
 
   @include spacing(y, 2.5rem);
+
+  @include tablet {
+    position: static;
+  }
 }
